force-app/main/default/objects/ProductDetail__c/ProductDetail__c.object-meta.xml
<CustomObject>
    <label>Product Detail</label>
    <nameField>
        <displayFormat>PD-{0000000000}</displayFormat>
        <label>RowNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>