force-app/main/default/objects/ProductDetail__c/fields/ProdTechRefDetails__c.field-meta.xml
<CustomField>
    <fullName>ProdTechRefDetails__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prod Tech Ref Details</label>
    <referenceTo>ProdTechRefDetails__c</referenceTo>
    <relationshipLabel>Product Details</relationshipLabel>
    <relationshipName>PD_Prod_Tech_Ref_Details</relationshipName>
    <type>Lookup</type>
</CustomField>