force-app/main/default/objects/ProductDetail__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>ProdTechRefDetails__r.OrderType__c + &apos; | &apos; +  ProdTechRefDetails__r.Object__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>